--- a/public/style.css
+++ b/public/style.css
@@ -12,8 +12,12 @@ body {
     justify-content: center;
     height: 100vh;
     margin: 0;
-    background-color: #111D5E;
+    background-image: url('./images/bg_img.png'); 
+    background-size: cover; 
+    background-color: #111D5E; 
+    text-align: center;
 }
+
 
 .menu-container {
     position: relative;
@@ -66,121 +70,46 @@ button:hover {
     background: linear-gradient(to right, #FA9905, #F21170); /* Change gradient on hover */
 }
 
-p { 
-	margin-bottom: -10px; 
-} 
+.board {
+    display: grid;
+    grid-template-columns: repeat(3, 100px);
+    grid-template-rows: repeat(3, 100px);
+    gap: 5px;
+    margin: 20px auto;
+    justify-content: center;
+  }
 
-.ui {
+  .cell {
+    width: 100px;
+    height: 100px;
+    border: 2px solid #FA9905;
+    font-size: 2em;
     display: flex;
-    flex-direction: column;
+    justify-content: center;
     align-items: center;
-    box-shadow:
-        30px 30px 20px 1px #F21170, /* Right and Bottom */
-        -30px -30px 20px 1px #FA9905, /* Left and Top */
-        30px -30px 40px 1px #FF5200, /* Top-right */
-        -30px 30px 40px 1px #FF5200; /* Bottom-left */
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 2;
+    cursor: pointer;
+    font-family: 'Silkscreen', sans-serif;
+    color: #111D5E;
+    background: linear-gradient(to right, #F21170, #FA9905); /* Linear gradient color */
+    color: #111D5E;
+    transition: background 0.3s ease-in-out;
+  }
+
+  .cell:hover {
+    background: linear-gradient(to right, #FA9905, #F21170); /* Change gradient on hover */
 }
 
-#but {
-    position: absolute;
-    top: 80vh; /* Adjust this value as needed */
-    left: 50%;
-    transform: translateX(-50%);
-    font-family: 'Chakra Petch', sans-serif;
-}
+  .reset-btn {
+    margin-top: 20px;
+    padding: 10px 20px;
+    font-size: 1.2em;
+    cursor: pointer;
+    margin-bottom: 0px;
+  }
 
-
-
-.row { 
-	display: flex; 
-} 
-.cell { 
-	border: none; 
-	width: 80px; 
-	height: 80px; 
-	display: flex; 
-	align-items: center; 
-	justify-content: center; 
-	font-size: 24px; 
-	text-align: center; 
-	cursor: pointer; 
-    background-color: #111D5E;
-} 
-.cell:active { 
-	outline: none; 
-} 
-/* 3X3 Grid */
-#b1{ 
-	border-bottom: 5px solid #F21170; 
-	border-right: 5px solid #F21170; 
-} 
-
-#b2 { 
-	border-bottom: 5px solid #F21170; 
-	border-right: 5px solid #F21170; 
-	border-left: 5px solid #F21170; 
-} 
-
-#b3 { 
-	border-bottom: 5px solid #F21170; 
-	border-left: 5px solid #F21170; 
-} 
-
-#b4 { 
-	border-top: 5px solid #F21170; 
-	border-bottom: 5px solid #F21170; 
-	border-right: 5px solid #F21170; 
-} 
-	
-#b5 { 
-	border: 5px solid #F21170; 
-} 
-
-#b6 { 
-	border-top: 5px solid #F21170; 
-	border-bottom: 5px solid #F21170; 
-	border-left: 5px solid #F21170; 
-} 
-
-#b7 { 
-	border-top: 5px solid #F21170; 
-	border-right: 5px solid #F21170; 
-} 
-
-#b8 { 
-	border-top: 5px solid #F21170; 
-	border-right: 5px solid #F21170; 
-	border-left: 5px solid #F21170; 
-} 
-
-#b9 { 
-	border-top: 5px solid #F21170; 
-	border-left: 5px solid #F21170; 
-} 
-
-/* Player turn space */
-#print { 
-    font-family: 'Chakra Petch', sans-serif;
-	color: #B8B5FF; 
-	font-size: 20px; 
-} 
-
-/* Main Container */
-#main { 
-	text-align: center; 
-} 
-
-/* Game Instruction Text */
-#ins { 
-    font-family: 'Chakra Petch', sans-serif;
-	color: #B8B5FF; 
-}
-
-p {
-    font-family: 'Chakra Petch', sans-serif;
-}
+  #result {
+    color: #FF5200; /* Change X won or O won message color */
+    font-size: 1.5em;
+    margin-top: 10px;
+    font-family: 'Silkscreen', sans-serif;
+  }
